update first notebook for paper section 2, updates to viz helpers

--- a/python/notebooks/01_BUG_paper_section_2.ipynb
+++ b/python/notebooks/01_BUG_paper_section_2.ipynb
@@ -22,25 +22,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c2c0172",
+   "id": "dea4eb04",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.optimize import root"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dea4eb04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('fivethirtyeight')"
    ]
@@ -83,8 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',\n",
-    "                           header=1, usecols=['Peak month', 'Trough month'],) \n",
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
+    "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
     "starts =  pd.to_datetime(df['Peak month'])\n",
     "\n",
     "ends = pd.to_datetime(df['Trough month'])"
@@ -263,16 +253,9 @@
    "source": [
     "ax = unempl_rate.plot(figsize=(9,6),linewidth=2, color='purple',)\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], draw_legend=True)\n",
     "plt.ylim(0, unempl_rate.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "\n",
     "plt.ylabel('Unemployment Rate', fontsize=12)\n",
     "plt.title('Unemployment Rate', fontsize=14)"
    ]
@@ -294,16 +277,9 @@
    "source": [
     "ax = vacancy_rate_splice.plot(figsize=(9,6),linewidth=2, color='purple',)\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], draw_legend=True)\n",
     "plt.ylim(0, vacancy_rate_splice.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "\n",
     "plt.ylabel('Vacancy Rate', fontsize=12)\n",
     "plt.title('Vacancy Rate', fontsize=14)\n"
    ]
@@ -323,14 +299,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig = plt.figure(figsize = (8,8))\n",
+    "ax = fig.add_subplot(1, 1, 1)\n",
+    "ax.plot(np.log(unempl_rate/100), np.log(vacancy_rate_splice/100), linewidth=1)\n",
     "\n",
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(np.log(unempl_rate/100), np.log(vacancy_rate_splice/100), linewidth=1)\n",
-    "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, xgrid=False)\n",
     "plt.xlim(-3.8, -2.1)\n",
     "plt.ylim(-4.3, -2.95)\n",
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
@@ -356,14 +329,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig = plt.figure(figsize = (8,8))\n",
+    "ax = fig.add_subplot(1, 1, 1)\n",
     "\n",
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(log_unempl_rate_q, log_vacancy_rate_q, linewidth=1,)\n",
+    "ax.plot(log_unempl_rate_q, log_vacancy_rate_q, linewidth=1,)\n",
+    "bug.format_plot(ax, xgrid=False)\n",
     "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
     "plt.xlim(-3.8, -2.1)\n",
     "plt.ylim(-4.3, -2.95)\n",
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
@@ -374,105 +345,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ba14c26",
+   "id": "b435ca96",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(log_unempl_rate_q, log_vacancy_rate_q, linewidth=1, color='grey')\n",
-    "plt.plot(log_unempl_rate_q.loc['1951Q1':'1969Q4'],log_vacancy_rate_q.loc['1951Q1':'1969Q4'], linewidth=3, color='orange')\n",
-    "\n",
-    "plt.annotate('1951', (log_unempl_rate_q.loc['1951Q1'], log_vacancy_rate_q.loc['1951Q1']))\n",
-    "plt.annotate('1969', (log_unempl_rate_q.loc['1969Q4'], log_vacancy_rate_q.loc['1969Q4']))\n",
-    "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
-    "plt.xlim(-3.8, -2.1)\n",
-    "plt.ylim(-4.3, -2.95)\n",
-    "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
-    "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
-    "plt.title('Beveridge Curve 1951-1969', fontsize=14)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "808af1bf",
+   "id": "a366a53e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(log_unempl_rate_q, log_vacancy_rate_q, linewidth=1, color='grey')\n",
-    "plt.plot(log_unempl_rate_q.loc['1970Q1':'1989Q4'],log_vacancy_rate_q.loc['1970Q1':'1989Q4'], linewidth=3, color='orange')\n",
-    "\n",
-    "plt.annotate('1970', (log_unempl_rate_q.loc['1970Q1'], log_vacancy_rate_q.loc['1970Q1']))\n",
-    "plt.annotate('1989', (log_unempl_rate_q.loc['1989Q4'], log_vacancy_rate_q.loc['1989Q4']))\n",
-    "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
-    "plt.xlim(-3.8, -2.1)\n",
-    "plt.ylim(-4.3, -2.95)\n",
-    "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
-    "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
-    "plt.title('Beveridge Curve 1970-1989', fontsize=14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c96849b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(log_unempl_rate_q, log_vacancy_rate_q, linewidth=1, color='grey')\n",
-    "plt.plot(log_unempl_rate_q.loc['1990Q1':'2009Q4'],log_vacancy_rate_q.loc['1990Q1':'2009Q4'], linewidth=3, color='orange')\n",
-    "\n",
-    "plt.annotate('1990', (log_unempl_rate_q.loc['1990Q1'], log_vacancy_rate_q.loc['1990Q1']))\n",
-    "plt.annotate('2009', (log_unempl_rate_q.loc['2009Q4'], log_vacancy_rate_q.loc['2009Q4']))\n",
-    "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
-    "plt.xlim(-3.8, -2.1)\n",
-    "plt.ylim(-4.3, -2.95)\n",
-    "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
-    "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
-    "plt.title('Beveridge Curve 1990-2009', fontsize=14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b311f08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(log_unempl_rate_q, log_vacancy_rate_q, linewidth=1, color='grey')\n",
-    "plt.plot(log_unempl_rate_q.loc['2010Q1':'2019Q4'],log_vacancy_rate_q.loc['2010Q1':'2019Q4'], linewidth=3, color='orange')\n",
-    "\n",
-    "plt.annotate('2010', (log_unempl_rate_q.loc['2010Q1'], log_vacancy_rate_q.loc['2010Q1']))\n",
-    "plt.annotate('2019', (log_unempl_rate_q.loc['2019Q4'], log_vacancy_rate_q.loc['2019Q4']))\n",
-    "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
-    "plt.xlim(-3.8, -2.1)\n",
-    "plt.ylim(-4.3, -2.95)\n",
-    "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
-    "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
-    "plt.title('Beveridge Curve 2010-2019', fontsize=14)"
+    "bug.plot_beveridge_curve_segments(log_unempl_rate_q, log_vacancy_rate_q, \n",
+    "                                  [0, 76, 156, 236, 276])"
    ]
   },
   {
