update second notebook for paper appendix B

--- a/python/notebooks/02_BUG_paper_appendix_B.ipynb
+++ b/python/notebooks/02_BUG_paper_appendix_B.ipynb
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
-    "\n",
+    "from matplotlib.patches import Patch\n",
     "%matplotlib inline\n",
     "plt.style.use('fivethirtyeight')"
    ]
@@ -202,8 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',\n",
-    "                           header=1, usecols=['Peak month', 'Trough month'],) \n",
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',header=1, \n",
+    "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index()\n",
     "starts =  pd.to_datetime(df['Peak month'])\n",
     "\n",
     "ends = pd.to_datetime(df['Trough month'])"
@@ -270,19 +270,15 @@
     "ax = find_rate_q[:-1].plot(figsize=(9,7), linewidth=1.5, label='Quarterly (python output)')\n",
     "find_rate_m[:-1].plot(ax=ax, linewidth=1.5, label='Monthly (python output)')\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
     "\n",
     "plt.ylim(0, find_rate_q.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends],)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylabel('Job-finding rate', fontsize=13)\n",
-    "plt.legend(fontsize=12)\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "plt.legend(handles=handles, labels=labels,fontsize=12)\n",
     "plt.title('Python Outputs', fontsize=14)"
    ]
   },
@@ -317,19 +313,15 @@
     "ax = fig_A1.rename(columns={'Quarterly job-finding rate': 'Quarterly (matlab output)'}).plot(figsize=(9,7), \n",
     "                linewidth=3, color='k', linestyle='dotted',)\n",
     "find_rate_q[:-1].plot(ax=ax, linewidth=1.5, label='Quarterly (python output)')\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, find_rate_q.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
     "\n",
     "plt.ylabel('Job-finding rate', fontsize=13)\n",
-    "plt.legend(fontsize=12)\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "plt.legend(handles=handles, labels=labels,fontsize=12)\n",
     "plt.title('Python vs MATLAB Outputs', fontsize=14)"
    ]
   },
@@ -395,18 +387,15 @@
    "source": [
     "ax = sep_rate_q[:-1].plot(figsize=(9,7), linewidth=1.5, label='Quarterly (python output)')\n",
     "sep_rate_m[:-1].plot(ax=ax, linewidth=1.5, label='Monthly (python output)')\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
     "\n",
     "plt.ylim(0, sep_rate_q.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
-    "ax.grid(axis='x')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "plt.legend(handles=handles, labels=labels,fontsize=12)\n",
+    "\n",
     "plt.ylabel('Job-separation rate', fontsize=13)\n",
-    "plt.legend(fontsize=12)\n",
     "plt.title('Python Outputs', fontsize=14)"
    ]
   },
@@ -441,19 +430,17 @@
     "ax = fig_A2.rename(columns={'Quarterly job-separation rate': 'Quarterly (matlab output)'}).plot(figsize=(9,7), \n",
     "                                    linewidth=3, linestyle='dotted', color='k', alpha=.8 )\n",
     "sep_rate_q[:-1].plot(ax=ax, linewidth=1.5, label='Quarterly (python output)')\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, sep_rate_q.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "\n",
     "plt.ylabel('Job-separation rate', fontsize=13)\n",
-    "plt.legend(fontsize=12)\n",
-    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "plt.legend(handles=handles, labels=labels,fontsize=12)"
    ]
   },
   {
@@ -513,24 +500,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = unempl_q[1:].plot(figsize=(9,7), linewidth=3, color='m', alpha=.8,\n",
+    "ax = unempl_q.plot(figsize=(9,7), linewidth=3, color='m', alpha=.8,\n",
     "                    label='actual unemployemnt', linestyle='dotted')\n",
-    "bev_unempl[:-1].plot(ax=ax, linewidth=1.5, label='beveridgean (python output)')\n",
+    "bev_unempl.plot(ax=ax, linewidth=1.5, label='beveridgean (python output)')\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, unempl_q.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
     "\n",
     "plt.ylabel('Unemployment rate', fontsize=13)\n",
-    "plt.legend(fontsize=12)\n",
-    "plt.title('Python Output vs Actual (quarterly)', fontsize=14)"
+    "plt.title('Python Output vs Actual (quarterly)', fontsize=14)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "plt.legend(handles=handles, labels=labels,fontsize=12, loc=4)"
    ]
   },
   {
@@ -555,19 +538,17 @@
     "ax = fig_A3.rename(columns={'Beveridgean unemployment rate': 'Beveridgean (matlab output)'}).plot(figsize=(9,7), \n",
     "                linewidth=3, color='k', linestyle='dotted')\n",
     "bev_unempl[:-1].plot(ax=ax, linewidth=1.5, label='Beveridgean (python output)')\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5, zorder=-100)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, unempl_q.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "\n",
     "plt.ylabel('unemployement rate', fontsize=13)\n",
-    "plt.legend(fontsize=12)\n",
-    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "plt.legend(handles=handles, labels=labels,fontsize=12, loc=4)"
    ]
   },
   {
@@ -621,19 +602,16 @@
     "ax = unempl_m[1:].plot( ax=ax, linewidth=2, color='m', \n",
     "                     label='actual unemployemnt')\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5, zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, unempl_m.max()*1.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "\n",
     "plt.ylabel('Unemployment rate', fontsize=13)\n",
-    "plt.legend(fontsize=12)\n",
-    "plt.title('Python Output vs Actual (monthly)', fontsize=14)"
+    "plt.title('Python Output vs Actual (monthly)', fontsize=14)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "plt.legend(handles=handles, labels=labels,fontsize=12, loc=4)"
    ]
   },
   {
