update 3rda nd fourth notebook for paper appendix C-D and section 5

--- a/python/notebooks/02_BUG_paper_appendix_B.ipynb
+++ b/python/notebooks/02_BUG_paper_appendix_B.ipynb
@@ -253,11 +253,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5902228",
+   "id": "3333037c",
    "metadata": {},
    "source": [
-    "#### Re-create figure A1\n",
-    "Job-finding rate in the US, 1951-2019"
+    "# FIGURE A1\n",
+    "## Job-finding rate in the United States, 1951–2019"
    ]
   },
   {
@@ -374,8 +374,8 @@
    "id": "3cfeea7c",
    "metadata": {},
    "source": [
-    "#### Re-create figure A2\n",
-    "Job-separation rate in the US, 1951-2019"
+    "# FIGURE A2\n",
+    "## Job-separation rate in the US, 1951-2019"
    ]
   },
   {
@@ -494,6 +494,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27f02bf5",
+   "metadata": {},
+   "source": [
+    "# FIGURE A3 \n",
+    "## Beveridgean unemployment rate in the United States, 1951–2019"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4fc6cbab",
@@ -508,7 +517,7 @@
     "bug.format_plot(ax, recession_dates=[starts, ends])\n",
     "\n",
     "plt.ylabel('Unemployment rate', fontsize=13)\n",
-    "plt.title('Python Output vs Actual (quarterly)', fontsize=14)\n",
+    "plt.title('Beveridgean vs Actual (quarterly)', fontsize=14)\n",
     "\n",
     "handles, labels = ax.get_legend_handles_labels()\n",
     "handles.append(Patch(facecolor='grey',))\n",
