--- a/python/notebooks/04_BUG_paper_section_5.ipynb
+++ b/python/notebooks/04_BUG_paper_section_5.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from matplotlib.patches import Patch\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('fivethirtyeight')"
    ]
@@ -83,8 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',\n",
-    "                           header=1, usecols=['Peak month', 'Trough month'],) \n",
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
+    "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
     "starts =  pd.to_datetime(df['Peak month'])\n",
     "\n",
     "ends = pd.to_datetime(df['Trough month'])"
@@ -298,13 +298,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(log_u_q, log_v_q, linewidth=1,)\n",
+    "fig = plt.figure(figsize = (8,8))\n",
+    "ax = fig.add_subplot(1, 1, 1)\n",
+    "ax.plot(log_u_q, log_v_q, linewidth=1,)\n",
     "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, xgrid=False)\n",
     "plt.xlim(-3.8, -2.1)\n",
     "plt.ylim(-4.3, -2.95)\n",
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
@@ -410,37 +408,21 @@
    "id": "9c1c4a2f",
    "metadata": {},
    "source": [
-    "#### Visualize like the M&S paper"
+    "#### Visualize like the M&S paper\n",
+    "# FIGURE 5 \n",
+    "### Beveridge-curve branches in the United States, 1951–2019."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d0fe821",
+   "id": "101b0708",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "for idx, b in enumerate(est_bkps[:-1]):\n",
-    "\n",
-    "    plt.figure(figsize = (6,6))\n",
-    "    plt.plot(log_u_q, log_v_q, linewidth=1, color='grey')\n",
-    "    plt.plot(log_u_q.iloc[est_bkps[idx]:est_bkps[idx+1]],log_v_q.iloc[est_bkps[idx]:est_bkps[idx+1]], \n",
-    "             linewidth=3, color='teal')\n",
-    "    \n",
-    "    plt.annotate(str(log_u_q.index[est_bkps[idx]]), (log_u_q.iloc[est_bkps[idx]], log_v_q.iloc[est_bkps[idx]]) )\n",
-    "    plt.annotate(str(log_u_q.index[est_bkps[idx+1]-1]), (log_u_q.iloc[est_bkps[idx+1]-1], log_v_q.iloc[est_bkps[idx+1]-1] ) )\n",
-    "\n",
-    "    plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "    plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "    plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "    plt.gca().spines[\"left\"].set_color('k')\n",
-    "    plt.xlim(-3.8, -2.1)\n",
-    "    plt.ylim(-4.3, -2.95)\n",
-    "    plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
-    "    plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
-    "    plt.title('Beveridge Curve (quarterly)', fontsize=14)"
+    "bug.plot_beveridge_curve_segments(log_u_q, log_v_q, est_bkps)"
    ]
   },
   {
@@ -456,9 +438,8 @@
    "id": "39d37802",
    "metadata": {},
    "source": [
-    "### Get Elasticity as a series \n",
-    "#### (calls the breakpoint estimation internally)\n",
-    "This functions takes u and v directly. (*not the logs*)"
+    "## Get Elasticity as a series \n",
+    "### (calls the breakpoint estimation internally)"
    ]
   },
   {
@@ -468,33 +449,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bev_e = bug.compute_beveridge_elasticity(unempl_rate, vacancy_rate_splice, \n",
-    "                                         quarterly=True,use_bp_defaults=True)"
+    "bev_e, _ = bug.compute_beveridge_elasticity(log_u_q, log_v_q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac4a9b40",
+   "metadata": {},
+   "source": [
+    "# FIGURE  6 \n",
+    "## Beveridge elasticity in the United States, 1951–2019."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c612ba3e",
+   "id": "1a636265",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax= bev_e['E'].plot(color='blueviolet', linewidth=2, figsize=(9, 6))\n",
-    "bev_e[['LB', 'UB']].plot(color='blueviolet', linewidth=2,linestyle='dotted', ax=ax, legend=False)\n",
-    "plt.fill_between(bev_e.index, bev_e['UB'], bev_e['LB'], color='blueviolet', alpha=.2)\n",
-    "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
-    "plt.ylim(0, 1.5)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
-    "plt.ylabel('Beveridge Elasticity', fontsize=12)\n",
-    "plt.title('Beveridge Elasticity', fontsize=14)\n"
+    "bug.plot_beveridge_elasticity_series(bev_e, recession_dates=[starts, ends],)\n",
+    "plt.ylim(0, 1.5)"
    ]
   },
   {
@@ -609,6 +584,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ceb0cd5f",
+   "metadata": {},
+   "source": [
+    "# FIGURE 7A\n",
+    "## Efficeient labor market tightness"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5cbda9e0",
@@ -621,19 +605,15 @@
     "plt.fill_between(theta.index, eff_mar_tightness, np.max((theta, eff_mar_tightness), axis=0),color='magenta', alpha=.2)\n",
     "plt.fill_between(theta.index, eff_mar_tightness, np.min((theta, eff_mar_tightness), axis=0),color='navy', alpha=.2)\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True)\n",
     "plt.ylim(0, 1.6)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Labor Market Tightness', fontsize=12)\n",
-    "plt.title('Labor Market Tightness', fontsize=14)"
+    "plt.title('Labor Market Tightness', fontsize=14)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "ax.legend(handles=handles, labels=labels, loc=1)"
    ]
   },
   {
@@ -644,6 +624,15 @@
    "outputs": [],
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=0.26, kappa=0.92)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d524af8",
+   "metadata": {},
+   "source": [
+    "# FIGURE 7B\n",
+    "## Efficient unemployment rate"
    ]
   },
   {
@@ -659,19 +648,16 @@
     "plt.fill_between(theta.index, eff_unempl, np.min((u_q, eff_unempl), axis=0),color='magenta', alpha=.2)\n",
     "plt.fill_between(theta.index, eff_unempl, np.max((u_q, eff_unempl), axis=0),color='navy', alpha=.2)\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
     "\n",
-    "ax.grid(axis='x')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True)\n",
     "plt.ylim(0, .12)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "\n",
     "plt.ylabel('Unemployment', fontsize=12)\n",
-    "plt.title('Unemployment', fontsize=14)"
+    "plt.title('Unemployment', fontsize=14)\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "ax.legend(handles=handles, labels=labels, loc=4)"
    ]
   },
   {
@@ -682,6 +668,15 @@
    "outputs": [],
    "source": [
     "unepl_gap = bug.compute_unemployment_gap(u_q, v_q, bev_e['E'], zeta=0.26, kappa=0.92)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1d2093a",
+   "metadata": {},
+   "source": [
+    "# FIGURE 7C\n",
+    "## Unemployment gap"
    ]
   },
   {
@@ -697,19 +692,15 @@
     "plt.fill_between(unepl_gap.index, 0, [max(0,g) for g in unepl_gap],color='navy', alpha=.2)\n",
     "\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(-.02, .08)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True)\n",
     "plt.ylabel('Unemployment Gap', fontsize=12)\n",
-    "plt.title('Unemployment Gap', fontsize=14)"
+    "plt.title('Unemployment Gap', fontsize=14)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "ax.legend(handles=handles, labels=labels, loc=4)"
    ]
   },
   {
@@ -774,6 +765,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0ab1ba3",
+   "metadata": {},
+   "source": [
+    "# FIGURE 7D\n",
+    "## Alternative unemployment rates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "60a7f8a9",
@@ -785,20 +785,15 @@
     "natural['Natural rate of unemployment (percent)'].plot(color='darkgreen', linestyle='dashed',linewidth=2,label='Natural')\n",
     "trend['Trend of unemployment rate (percent)'].plot(color='k', linestyle='dotted',linewidth=2.5,label='Trend')\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True)\n",
     "\n",
-    "\n",
-    "plt.legend()\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, .1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
-    "plt.ylabel('Unemployment', fontsize=12)\n",
-    "plt.title('Alternate Unemployment Rates', fontsize=14)"
+    "\n",
+    "plt.title('Alternate Unemployment Rates', fontsize=14)\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "ax.legend(handles=handles, labels=labels, loc=4)"
    ]
   },
   {
