--- a/python/notebooks/03_BUG_paper_appendix_C-D.ipynb
+++ b/python/notebooks/03_BUG_paper_appendix_C-D.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from matplotlib.patches import Patch\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('fivethirtyeight')"
    ]
@@ -48,14 +48,6 @@
     "sys.path.insert(0, '../bug')\n",
     "import bug"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b021670c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -75,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',\n",
-    "                           header=1, usecols=['Peak month', 'Trough month'],) \n",
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
+    "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
     "starts =  pd.to_datetime(df['Peak month'])\n",
     "\n",
     "ends = pd.to_datetime(df['Trough month'])"
@@ -162,9 +154,11 @@
    "source": [
     "u_q = unempl_rate.resample('Q').mean()/100\n",
     "u_q = u_q.loc[:u_q.last_valid_index()]\n",
+    "log_u_q = np.log(u_q)\n",
     "\n",
     "v_q = vacancy_rate_splice.resample('Q').mean()/100\n",
-    "v_q = v_q.loc[:v_q.last_valid_index()]"
+    "v_q = v_q.loc[:v_q.last_valid_index()]\n",
+    "log_v_q = np.log(v_q)"
    ]
   },
   {
@@ -182,7 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bev_e = bug.compute_beveridge_elasticity(unempl_rate, vacancy_rate_splice, )"
+    "bev = bug.compute_beveridge_elasticity(log_u_q, log_v_q, )\n",
+    "bev_e_q = bev[0].E.resample('Q').mean()"
    ]
   },
   {
@@ -192,7 +187,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eta = bug.compute_matching_elasticity(u_q, bev_e.E)"
+    "eta = bug.compute_matching_elasticity(u_q, bev_e_q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cd32dca",
+   "metadata": {},
+   "source": [
+    "# FIGURE A4\n",
+    "## Matching elasticity in the United States, 1951–2019"
    ]
   },
   {
@@ -204,16 +208,9 @@
    "source": [
     "ax= eta.plot(color='blueviolet', linewidth=2, figsize=(9, 6))\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, .6)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], draw_legend=True)\n",
+    "\n",
     "plt.ylabel('Matching Elasticity', fontsize=12)\n",
     "plt.title('Matching Elasticity', fontsize=14)\n"
    ]
@@ -243,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ustar = bug.compute_efficient_unemployment(u_q,v_q, bev_e.E)"
+    "ustar = bug.compute_efficient_unemployment(u_q,v_q, bev_e_q )"
    ]
   },
   {
@@ -269,29 +266,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a878c78",
+   "metadata": {},
+   "source": [
+    "# FIGURE A5\n",
+    "## US efficient unemployment rate with endogenous Beveridge elasticity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b3408bbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax= ustar.plot(color='darkorange', linewidth=2, figsize=(9, 6), label=\"Exogenous\")\n",
-    "ustar_endo.plot(color='magenta', linewidth=2,  label=\"Endogenous\")\n",
+    "ax= ustar.plot(color='magenta', linewidth=2, figsize=(9, 6), label=\"Exogenous\")\n",
+    "ustar_endo.plot(color='darkorange', linewidth=2,  label=\"Endogenous\")\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, .06)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "\n",
     "plt.ylabel('Efficient unemployment rate', fontsize=12)\n",
-    "plt.title('Beveridge Elasticity', fontsize=14)"
+    "plt.title('Beveridge Elasticity', fontsize=14)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "ax.legend(handles=handles, labels=labels, loc=3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1ef6183",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -353,6 +365,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fecf05f9",
+   "metadata": {},
+   "source": [
+    "# FIGURE A6 \n",
+    "## Matching efficacy in the United States, 1951–2019"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c866f8f8",
@@ -361,16 +382,9 @@
    "source": [
     "ax= omega.plot(color='darkred', linewidth=2, figsize=(9, 6), )\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, 4)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], draw_legend=True)\n",
+    "\n",
     "plt.ylabel('Matching Efficacy', fontsize=12)\n",
     "plt.title('Matching Efficacy', fontsize=14)"
    ]
@@ -422,6 +436,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27d33d7b",
+   "metadata": {},
+   "source": [
+    "# FIGURE A7\n",
+    "## Hosiosian efficient unemployment rate in the United States, 1951–2019"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "093ca468",
@@ -431,19 +454,16 @@
     "ax= u_hosios.plot(color='darkorange', linewidth=2, figsize=(9, 6), label=\"Hosios\" )\n",
     "ustar_endo.plot(color='magenta', linewidth=2,  label=\"Endogenous\")\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, .06)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends],)\n",
+    "\n",
     "plt.ylabel('Efficient unemployment rate', fontsize=12)\n",
-    "plt.title('Efficient unemployment rate', fontsize=14)"
+    "plt.title('Efficient unemployment rate', fontsize=14)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.append(Patch(facecolor='grey',))\n",
+    "labels.append(\"Recession indicator\")\n",
+    "ax.legend(handles=handles, labels=labels, loc=3)"
    ]
   },
   {
